--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 body {
-  background-color: #282c34;
+  background-color: #1f2631;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
