--- a/src/components/IdAdvice/IdAdvice.css
+++ b/src/components/IdAdvice/IdAdvice.css
@@ -1,3 +1,7 @@
 .IdAdvice {
+  padding-top: 35px;
   color: #4effaf;
+  font-size: 8px;
+  letter-spacing: 3px;
+  font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
