--- a/src/components/ButtonGenerate/ButtonGenerate.css
+++ b/src/components/ButtonGenerate/ButtonGenerate.css
@@ -1,39 +1,14 @@
-.ButtonGenerate {
-  padding-top: 8px;
-}
-.ButtonGenerate .line {
-  margin-left: 35px;
-  border-top: 0.5px solid rgba(255, 255, 255, 0.158);
-  width: 85%;
-  margin-top: 5%;
-}
-
-.ButtonGenerate .pause {
-  font-size: 25px;
-  color: aliceblue;
-  margin-top: 7px;
-}
-.ButtonGenerate .circle-pause {
-  background-color: #313949;
-  border-radius: 50px;
-  margin-left: 44%;
-  width: 45px;
-  height: 45px;
-  margin-top: -36px;
-}
-
 .ButtonGenerate .circle-dice {
+  position: absolute;
   background-color: #4effaf;
   border-radius: 50px;
-  margin-left: 43%;
   width: 55px;
   height: 55px;
-  margin-top: 10px;
-  margin-bottom: -28px;
+  margin-top: 9px;
 }
 
 .dice {
-  margin-top: 15px;
+  margin-top: 16px;
+  margin-left: 17px;
   color: #1f2631;
-  font-size: 25px;
 }
