--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap");
 
 html,
 body {
   background-color: #1f2631;
-  height: 100%;
-  margin: 0;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Roboto", monospace, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Manrope", sans-serif;
 }
