--- a/src/components/AdviceCard/AdviceCard.css
+++ b/src/components/AdviceCard/AdviceCard.css
@@ -1,15 +1,18 @@
 .AdviceCard {
+  margin: 0 auto;
+  background-color: #313949;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: aliceblue;
-  padding: 5px;
-  font-size: 24px;
-  margin-left: 30px;
-  margin-right: 30px;
-  min-width: 50px;
-  min-height: 103px;
+  display: flex;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 540px;
+  padding: 3rem 2rem 4.5rem 2rem;
+  position: relative;
 }
 
 .AdviceCard p {
@@ -17,4 +20,18 @@
   font-weight: 700;
   color: #4effaf;
   font-size: 14px;
+  margin-bottom: 1rem;
+}
+
+.AdviceCard h2 {
+  font-size: 28px;
+  margin-bottom: 2rem;
+}
+
+.AdviceCard .divider_desk {
+  margin-bottom: 10px;
+}
+
+.AdviceCard .divider_mobile {
+  display: none;
 }
