--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&display=swap");
 
-html,
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Manrope", sans-serif;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #1f2631;
-  height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
-  font-family: "Manrope", sans-serif;
+  justify-content: center;
+  height: 100vh;
 }
