--- a/src/components/AdviceCard/AdviceCard.css
+++ b/src/components/AdviceCard/AdviceCard.css
@@ -14,7 +14,6 @@
   padding: 3rem 2rem 4.5rem 2rem;
   position: relative;
 }
-
 .AdviceCard p {
   letter-spacing: 3px;
   font-weight: 700;
@@ -22,12 +21,11 @@
   font-size: 14px;
   margin-bottom: 1rem;
 }
-
 .AdviceCard h2 {
   font-size: 28px;
   margin-bottom: 2rem;
+  text-align: center;
 }
-
 .AdviceCard .divider_desk {
   margin-bottom: 10px;
 }
