--- a/src/components/ButtonGenerate/ButtonGenerate.css
+++ b/src/components/ButtonGenerate/ButtonGenerate.css
@@ -17,5 +17,10 @@
 
 .circle-dice:hover {
   box-shadow: #4effaf57 0px 0px 16px;
-  transition: 0.2s ease-in-out;
+  transition: 0.1s ease-in-out;
+}
+.circle-dice:active {
+  background-color: #4effafcb;
+  box-shadow: #4effaf57 0px 0px 16px;
+  transform: translateY(3px);
 }
